Fri Mar 24 22:07:10 2000  Robin Ericsson  <lobbin@localhost.nu>

	* Fixed bugs:
	[103014]: Scroll bar only works for the main window
	
	* acconfig.h/autogen.sh/configure.in: Changed some checkings
	mostly regarding dlopen stuff.

	* src/amcl.h (CONNECTION_DATA): the vscrollbar needs to follow
	the connection, can not use the main one.

	* src/init.c (init_window): Both window and scrollbar are now
	included in the notebook.

	* src/modules.c: Use some new <dirent.h> stuff I found in the
	autoconf documentation.

	* src/net.c (make_connection): also create scrollbar when we
	create a new notebook tab.

	* src/wizard.c: Just some code cleaning.

Mon Mar 13 19:03:35 2000  Robin Ericsson  <lobbin@localhost.nu>

	* AUTHORS: Added Benjamin Curtis (email not known)

	* TODO: Added some stuff.

	* configure.in: Moved to 0.8.0.

	* src/Makefile.am: telnet.c added to the files.

	* src/Makefile.mkhelp: Fixed compiling errors.

	* src/amcl.c: Do not initialize modules in PKGDATADIR (yet).

	* src/amcl.h: Added savefiles version.
	(connection_data): Added gboolean echo.

	* src/color.c: Compile warning fixes only.

	* src/net.c: Removed some unnecessary definitions.
	(read_from_connection): Added TELNET protocol support.
	(connection_send): Fixed for the above.

	* src/prefs.c: Fixed spelling errors.
	(prefs_font_selected): Fixed crash when not choosing a font.

	* src/wizard.c: Added version to wizard savefile.
	(window_wizard): Password is now not seen.
	
	* src/telnet.c: Added, functions for TELNET protocol.

Mon Feb 28 19:36:49 2000  Robin Ericsson  <lobbin@localhost.nu>

	* Makefile.am: Added acconfig.h.

	* README: Spelling errors.

	* src/Makefile.am: mkhelp removed, and readme_doc.h and
	authors_doc.h added.

	* src/Makefile.mkhelp: added to create readme_doc.h and
	authors_doc.h.

	* src/amcl.c (main): Create ~/.amcl/plugins aswell as
	~/.amcl

	* src/color.c (create_color_box): renamed to window_color(),
	now it doesn't break when opening, closing, and open again.
