@@ -1,4 +1,4 @@
-Original AUTHOR
+AUTHOR
 ---------------
 Robin Ericsson <lobbin@localhost.nu>
 
